src/components/controls/shopWindow/Shop-Window.less
@import '../../../styles/variables.less';

.article-list {
    display: flex;
    margin: 0 -@defaultPadding/2;
    padding-bottom: @defaultPadding;
    flex-wrap: wrap;
    gap: @defaultPadding;
    column-gap: normal;
    .item {
        width: 20%;
        padding: 0 @defaultPadding/2;
        text-align: center;
        .border-wrapper {
            border: 1px solid @borderColor;
            padding: @defaultPadding/2;
            background: #FEFEFE;
            .image {
                background-position: center center;
                background-size: cover;
                background-repeat: no-repeat;
                padding-top: 100%;
                position:relative;
                margin: -@defaultPadding/2;
                margin-bottom: @defaultPadding;
                .badge {
                    position: absolute;
                    top: 0;
                    left: 0;
                    background: @campaignColor;
                    color: #FFF;
                    z-index: 5;
                    padding: 0.4rem;

                }
                img {
                    position: absolute;
                    top: 0;
                    left: 0;
                    right: 0;
                    bottom: 0;
                    width: 100%;
                    height: 100%;
                }
            }
            .item-info {
                line-height: 1.3rem;
                .name {
                    font-weight: @fontWeightMedium;
                }
                .intro {
                    font-size: 0.85rem;
                }
                .price-container {
                    display: flex;
                    justify-content: space-around;
                    .price {
                        &.discount {
                            color: @campaignColor;
                        }
                    }
                    .regular-price {
                        color: #AAA;
                        text-decoration: line-through;
                    }
                    .saving-price {
                        color: #F00;
                    }
                }
            }
            
        }
        @media screen and (max-width: @breakPointFirst) and (min-width: @breakPointSecond) {
            width:25%;
        }
        @media screen and (max-width: @breakPointSecond) and (min-width: @breakPointThird) {
            width: 33.33333%;
        }
        @media screen and (max-width: @breakPointThird) {
            width:50%;
            .border-wrapper {
                border:0;
            }
        }
    }
}

